# openapi-specification

./: .bazeliskrc  .bazelrc  .gitattributes  .gitignore  .releaserc  BUILD.bazel  LICENSE  README.md  WORKSPACE  openapi-smusher.sh  package-lock.json  package.json  smusher-config.json
.github/workflows/: build.yml  command.yml  release.yml  test.yml  update-devdoc.yml  update-dist.yml
generator/documentation/: BUILD.bazel  build.ts  helpers.ts  parameters.ts  schema-dependencies-helper.ts  schema.ts
generator/postman/: BUILD.bazel  postman.ts
generator/requests/: BUILD.bazel  requests.ts  snippets.ts  types.ts  x-code-samples.ts
generator/responses/: BUILD.bazel  response.ts
redocly-plugins/: decorators.js  redocly-config.yaml
redocly-plugins/decorators/: one-security-scheme.js  remove-parameters.js  remove-unused-tags.js  trim-description.js
rules/: dereference.ts  dist-is-updated.ts  parameters.ts  schema-in-index.ts  schema-title.ts  swagger_cli.bzl  swagger_merge.bzl
specification/: BUILD.bazel  index.yml
specification/parameters/: _index.yml  query.yml
specification/parameters/address/: address.yml  cc_format.yml  components.yml  fields.yml  input.yml  language.yml  latlng.yml  limit.yml  location.yml  public_id.yml
specification/parameters/distance/: alternatives.yml  arrival_time.yml  avoid.yml  departure_time.yml  destination.yml  destinations.yml  details.yml  elements.yml  language.yml  method.yml  mode.yml  origin.yml  origins.yml  units.yml  value.yml  waypoints.yml
specification/parameters/geolocation/: ip_address.yml  limit.yml
specification/parameters/localities/: address.yml  addresses_per_page.yml  categories.yml  cc_format.yml  components.yml  custom_description.yml  data.yml  excluded_types.yml  extended.yml  fields.yml  geocode_types.yml  input.yml  language.yml  latlng.yml  list_sub_buildings.yml  location.yml  page.yml  public_id.yml  radius.yml  search_types.yml  types.yml
specification/parameters/merchants/: dirty_name.yml
specification/parameters/search/: encoded_polyline.yml  language.yml  limit.yml  lng.yml  page.yml  query.yml  searchLat.yml  searchRadius.yml  stores_by_page.yml  zone.yml
specification/parameters/traffic/: arrival_time.yml  avoid.yml  departure_time.yml  routing.yml  waypoints.yml
specification/parameters/zones/: limit.yml  offset.yml
specification/paths/: _index.yml
specification/paths/address/: addressAutocomplete.yml  addressDetails.yml  addressGeocode.yml
specification/paths/bounds/: storesBounds.yml
specification/paths/distance/: distanceIsochrone.yml  (+4 more)
specification/requests/: woosmap_http_assets_collection_request.yml  woosmap_http_assets_collection_simple_request.yml  woosmap_http_assets_update_request.yml  woosmap_http_assets_update_simple_request.yml  woosmap_http_distance_matrix_request.yml  woosmap_http_merchant_brand_request.yml  woosmap_http_merchants_place_request.yml  woosmap_http_traffic_distance_matrix_request.yml  woosmap_http_zones_collection_request.yml  woosmap_http_zones_update_request.yml
specification/responses/: woosmap_http_address_autocomplete_collection_response.yml  woosmap_http_address_autocomplete_response.yml  woosmap_http_address_details_response.yml  woosmap_http_address_geocode_collection_response.yml  woosmap_http_address_geocode_response.yml  woosmap_http_asset_autocomplete_feature_collection_response.yml  woosmap_http_asset_feature_collection_response.yml  woosmap_http_asset_feature_response.yml  woosmap_http_asset_response.yml  woosmap_http_asset_search_by_zone_feature_collection_response.yml  woosmap_http_asset_weekly_opening_response.yml  woosmap_http_assets_create_request_response.yml  woosmap_http_assets_create_simple_request_response.yml  woosmap_http_assets_delete_by_id_request_response.yml  woosmap_http_assets_delete_request_response.yml  woosmap_http_assets_replace_request_response.yml  woosmap_http_assets_replace_simple_request_response.yml  woosmap_http_assets_update_request_response.yml  woosmap_http_assets_update_simple_request_response.yml  woosmap_http_bounds_search_response.yml  woosmap_http_distance_isochrone_response.yml  woosmap_http_distance_matrix_element_response.yml  woosmap_http_distance_matrix_elements_response.yml  woosmap_http_distance_matrix_request_response.yml  woosmap_http_distance_matrix_response.yml  woosmap_http_distance_route_elements_response.yml  woosmap_http_distance_route_response.yml  woosmap_http_distance_tolls_response.yml  woosmap_http_error_400_invalid_response.yml  woosmap_http_error_401_unauthorized_response.yml  woosmap_http_error_403_forbidden_response.yml  woosmap_http_error_429_ratelimit_response.yml  woosmap_http_geolocation_error_403_forbidden_response.yml  woosmap_http_geolocation_position_response.yml  woosmap_http_geolocation_response.yml  woosmap_http_geolocation_stores_response.yml  woosmap_http_localities_autocomplete_collection_response.yml  woosmap_http_localities_autocomplete_response.yml  woosmap_http_localities_details_address_response.yml  woosmap_http_localities_details_postal_code_response.yml  (+22 more)
specification/schemas/: AddressAutocompleteCollectionResponse.yml  AddressAutocompleteMatchedFields.yml  AddressAutocompleteResponse.yml  AddressComponents.yml  AddressDetailsResponse.yml  AddressGeocodeCollectionResponse.yml  AddressGeocodeResponse.yml  AddressGeocodeTypes.yml  AddressGeometry.yml  AddressStatus.yml  AddressTypes.yml  AdministrativeAreaLabel.yml  AssetAddress.yml  AssetAddressLines.yml  AssetAddressRequest.yml  AssetAddressResponse.yml  AssetAutocompleteResponse.yml  AssetContact.yml  AssetFeatureCollectionResponse.yml  AssetFeatureResponse.yml  AssetId.yml  AssetName.yml  AssetOpenResponse.yml  AssetOpeningHours.yml  AssetOpeningHoursPeriod.yml  AssetOpeningHoursSpecial.yml  AssetOpeningHoursUsual.yml  AssetRequest.yml  AssetResponse.yml  AssetTags.yml  AssetTypes.yml  AssetWeeklyOpeningHoursPeriod.yml  AssetWeeklyOpeningResponse.yml  AssetsCollectionRequest.yml  Bounds.yml  BoundsResponse.yml  Destinations.yml  DistanceInstructions.yml  DistanceIsochroneResponse.yml  DistanceLeg.yml  (+93 more)
(+200 files in other folders)
