load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "_lib",
    srcs = glob(["*.ts"]),
    deps = [
        "@npm//@types/axios",
        "@npm//@types/node",
        "@npm//@types/yargs",
        "@npm//axios",
        "@npm//tar-stream",
        "@npm//yargs",
    ],
)

nodejs_binary(
    name = "_postman_bin",
    data = [
        ":_lib",
        "//:woosmap-postman.json",
    ],
    entry_point = ":postman.ts",
    templated_args = [
        "--bazel_patch_module_resolver",  # https://github.com/bazelbuild/rules_nodejs/issues/2388
        "--collection",
        "18437534-dad12f37-6d84-42d1-9889-2f529aee0ab9",
        "--file",
        "$(location //:woosmap-postman.json)",
    ],
)
